added header section

--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>( সহজ সরল সিম্পল ) ASSIGNMENT-001 😎</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h1 class="nav_title">LOGO</h1>
+            <button class="prymary_btn">Sign Up</button>
+        </nav>
+        <div class="header_container">
+            <h1 class="header_title">Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="prymary_btn">Stay Focused</button>
+        </div>
     </header>
     <main>
 
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
