action section added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>( সহজ সরল সিম্পল ) ASSIGNMENT-001 😎</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,6 +21,17 @@
         </div>
     </header>
     <main>
+        <section class="action">
+          <div class="action_container">
+            <h1 class="action_title">See It in Action</h1>
+            <p class="action_discription">Explore the live preview and imagine your brand in this bold new look.</p>
+            <button class="prymary_btn">Launch Live Preview</button>
+          </div>
+          <div class="action_img">
+            <img src="./Assets/wc-mini.png" alt="">
+          </div>
+        </section>
+
 
     </main>
 
