added productive user section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
           </div>
         </section>
 
+        <section class="productive_user_section">
+            <h1>Joined Thousands of Productive Users</h1>
+           <div class="user_activity_container">
+             <div class="user_activitis">
+                <p class="activity_title">50K</p>
+                <p class="activity_name">Active Users</p>
+            </div>
+            <div class="user_activitis">
+                <p class="activity_title">2M+</p>
+                <p class="activity_name">Focus Sessions</p>
+            </div>
+            <div class="user_activitis">
+                <p class="activity_title">95%</p>
+                <p class="activity_name">Satisfaction Rate</p>
+            </div>
+            
+           </div>
+        </section>
+
+
+
 
     </main>
 
