--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
            </div>
         </section>
 
+        <section class="touch_section">
+            <h1 class="touch_title">Let’s Get in Touch</h1>
+            <form action="" class="form_container">
+                <label for="email">Email</label>
+                <input type="email" placeholder="example@email.com">
+                <label for="name">Name</label>
+                <input type="text" placeholder="full name">
+                <label for="message">Message</label>
+                <textarea name="message" id="" cols="40" rows="5">write your message....</textarea>
+                <input type="submit" value="Get in Touch" class="prymary_btn">
+            </form>
+        </section>
 
 
 
