--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
     </main>
 
     <footer>
+        <div class="about_us">
+            <h1 class="logo">
+                LOGO
+            </h1>
+            <p class="subtitle">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="about_us_link">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">How it Works</a>
+                <a href="">Services</a>
+            </div>
+        </div>
 
     </footer>
 </body>
