review section added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,61 @@
             
            </div>
         </section>
+        <section class="review_section">
+            <h1 class="review_title">What our users say</h1>
+
+        <div class="riview_containers">
+                <div class="review_container">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <h1 class="review_title_name">Loved by Designers</h1>
+                <p class="review_discription">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="reviewer_container">
+                    <img class="reviewer_img" src="./Assets/avatar.png" alt="">
+                    <div class="reviewer_info">
+                        <p class="reviewer_name">Reviewer name</p>
+                        <p class="review_date">Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="review_container">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <h1 class="review_title_name">Loved by Designers</h1>
+                <p class="review_discription">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="reviewer_container">
+                    <img class="reviewer_img" src="./Assets/avatar.png" alt="">
+                    <div class="reviewer_info">
+                        <p class="reviewer_name">Reviewer name</p>
+                        <p class="review_date">Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="review_container">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <h1 class="review_title_name">Loved by Designers</h1>
+                <p class="review_discription">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="reviewer_container">
+                    <img class="reviewer_img" src="./Assets/avatar.png" alt="">
+                    <div class="reviewer_info">
+                        <p class="reviewer_name">Reviewer name</p>
+                        <p class="review_date">Date</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        </section>
 
         <section class="touch_section">
             <h1 class="touch_title">Let’s Get in Touch</h1>
