--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
         </div>
         </section>
 
+        <section class="focus_section">
+            <h1 class="focus_titile">Ready to focus better</h1>
+            <p class="focus_discription">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="prymary_btn">Ger Started Free</button>
+            <img src="./Assets/wc-big.png" alt="" class="focus_img">
+        </section>
+
         <section class="touch_section">
             <h1 class="touch_title">Let’s Get in Touch</h1>
             <form action="" class="form_container">
